--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,17 +1,77 @@
-/* src/components/Navbar/Navbar.css */
+/* Navbar.css */
 .navbar {
-  background-color: #333; /* Dark background for the navbar */
-  padding: 10px 20px; /* Padding for some space around the links */
-  display: flex; /* Aligns the links horizontally */
-  justify-content: space-between; /* Distributes space between links */
+  background-color: #2c3e50; /* Darker shade for better contrast */
+  padding: 20px 30px; /* More padding for better touch targets */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.admin-section {
+  flex: 1; /* Adjust flex properties to push to the left */
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.dashboard-title {
+  flex: 2; /* Provides more space, allowing for centering */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-info-section {
+  flex: 1; /* Adjust flex properties to push to the right */
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.admin-title,
+.user-info,
+.dropdown-menu a {
+  font-weight: bold;
+}
+
+.user-info {
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-arrow {
+  margin-left: 5px;
+}
+
+.dropdown-menu {
+  position: absolute;
+  right: 0;
+  background-color: #555;
+  padding: 5px 10px;
+  border-radius: 5px;
+  top: 100%; /* Position below the user info */
+}
+
+.dropdown-menu a {
+  color: white;
+  text-decoration: none;
+}
+
+.dropdown-menu a:hover {
+  text-decoration: underline;
 }
 
 .nav-link {
-  color: white; /* White text color for visibility against dark bg */
-  text-decoration: none; /* Removes underline from links */
-  padding: 10px 15px; /* Padding for clickable area */
+  color: #ecf0f1; /* Light text for contrast */
+  text-decoration: none;
+  padding: 10px 15px;
+  font-size: 18px; /* Larger font for readability */
+  border-radius: 5px; /* Rounded corners for a modern look */
 }
 
 .nav-link:hover {
-  background-color: #555; /* Slightly lighter bg on hover for feedback */
+  background-color: #34495e; /* Slightly lighter bg on hover */
 }
